--- a/.gitignore
+++ b/.gitignore
@@ -500,5 +500,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 .vscode
-kitty/d1/go.mod
 go.mod
+*.exe
+*.exe
