--- a/.gitignore
+++ b/.gitignore
@@ -499,3 +499,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+david/3_Mull_it_over/src/input.txt
