--- a/Nat/.vscode/extensions.json
+++ b/Nat/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "mkornelsen.vscode-arm64",
         "yzhang.markdown-all-in-one",
         "davidanson.vscode-markdownlint",
-        "ms-vscode.powershell"
+        "ms-vscode.powershell",
+        "shardulm94.trailing-spaces"
     ]
 }
