--- a/.gitignore
+++ b/.gitignore
@@ -506,3 +506,13 @@ fabric.properties
 *.csv
 *.tsv
 *.txt
+/Felix/Day1/.stack-work
+*.yaml
+*.cabal
+*.lock
+/Felix/Day2/Haskell/.vscode
+/Felix/Day3/Haskell/.vscode
+/Felix/Day1/Haskell/.vscode
+/Felix/Day1/Haskell/.stack-work
+/Felix/Day2/Haskell/.stack-work
+/Felix/Day3/Haskell/.stack-work
