--- a/.gitignore
+++ b/.gitignore
@@ -516,3 +516,6 @@ fabric.properties
 /Felix/Day1/Haskell/.stack-work
 /Felix/Day2/Haskell/.stack-work
 /Felix/Day3/Haskell/.stack-work
+/Felix/Day4/Haskell/.stack-work
+/Felix/Day4/Haskell/.vscode
+/Felix/Day3/Haskell/dist-newstyle
